--- a/style/look.css
+++ b/style/look.css
@@ -66,6 +66,19 @@ p.player-info {
 	border-style: solid;
 }
 
+button {
+	width:70px;
+	height:35px;
+	cursor: pointer;
+	color: white;
+	font-size: 10px;
+	background-color: blue;
+	border-color: white;
+	border-width: 2px;
+	border-radius: 20px;
+	opacity: 0.5;
+}
+
 .msg {
 	letter-spacing: 3px;
 	position: absolute;
