--- a/style/look.css
+++ b/style/look.css
@@ -45,6 +45,22 @@ p.player-info {
 	resize: none;
 }
 
+tr {
+	text-align:center;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 20px;
+	color: blue;
+	resize: none;
+}
+
+td {
+	padding: 4px;
+}
+
+td p, h1 {
+	color: black;
+}
+
 .round {
 	display: block;
 	top: 0;
@@ -73,7 +89,7 @@ button {
 	color: white;
 	font-size: 10px;
 	background-color: blue;
-	border-color: white;
+	border-color: black;
 	border-width: 2px;
 	border-radius: 20px;
 	opacity: 0.5;
